sed - added sed structures + bug fixes

--- a/www/index.html
+++ b/www/index.html
@@ -90,6 +90,7 @@
     <script src="app/spot/relationships/relationships-tab.controller.js"></script>
     <script src="app/spot/samples/samples-tab.controller.js"></script>
     <script src="app/spot/sed/lithologies/lithologies-tab.controller.js"></script>
+    <script src="app/spot/sed/structures/structures-tab.controller.js"></script>
     <script src="app/spot/sed/strat-section/strat-section-tab.controller.js"></script>
     <script src="app/spot/spot-tab/spot-tab.controller.js"></script>
     <script src="app/spot/tags/tags-tab.controller.js"></script>
@@ -154,6 +155,7 @@
     <script src="app/spot/relationships/relationships-tab.directive.js"></script>
     <script src="app/spot/samples/samples-tab.directive.js"></script>
     <script src="app/spot/sed/lithologies/lithologies-tab.directive.js"></script>
+    <script src="app/spot/sed/structures/structures-tab.directive.js"></script>
     <script src="app/spot/sed/strat-section/strat-section-tab.directive.js"></script>
     <script src="app/spot/spot-tab/spot-tab.directive.js"></script>
     <script src="app/spot/tabs/spot-tabs.directive.js"></script>
