--- a/www/app/spots/spots.directive.html
+++ b/www/app/spots/spots.directive.html
@@ -25,6 +25,7 @@
           <span ng-if='vm.hasRelationships(spot.properties.id)' class='spot-tabs-on relationships-on'>Relationships</span>
           <span ng-if='spot.properties.sed && spot.properties.sed.strat_section' class='spot-tabs-on strat-section-on'>Strat Section</span>
           <span ng-if='spot.properties.sed && spot.properties.sed.lithologies' class='spot-tabs-on lithologies-on'>Lithologies</span>
+          <span ng-if='spot.properties.sed && spot.properties.sed.structures' class='spot-tabs-on sed-structures-on'>Sed Structures</span>
         </span>
         <div ng-show='vm.showDetail.tags'>
             <span ng-show='vm.hasTags(spot.properties.id)' class='list-sub'>
