sed - added sed interpretations tab

--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -106,6 +106,7 @@
     <script src="app/spot/other-features/other-features-tab.controller.js"></script>
     <script src="app/spot/relationships/relationships-tab.controller.js"></script>
     <script src="app/spot/samples/samples-tab.controller.js"></script>
+    <script src="app/spot/sed/interpretations/interpretations-tab.controller.js"></script>
     <script src="app/spot/sed/lithologies/lithologies-tab.controller.js"></script>
     <script src="app/spot/sed/structures/structures-tab.controller.js"></script>
     <script src="app/spot/sed/strat-section/strat-section-tab.controller.js"></script>
@@ -172,6 +173,7 @@
     <script src="app/spot/other-features/other-features-tab.directive.js"></script>
     <script src="app/spot/relationships/relationships-tab.directive.js"></script>
     <script src="app/spot/samples/samples-tab.directive.js"></script>
+    <script src="app/spot/sed/interpretations/interpretations-tab.directive.js"></script>
     <script src="app/spot/sed/lithologies/lithologies-tab.directive.js"></script>
     <script src="app/spot/sed/structures/structures-tab.directive.js"></script>
     <script src="app/spot/sed/strat-section/strat-section-tab.directive.js"></script>
