sed - added shortcuts to lithologies tab

--- a/www/app/maps/strat-section/add-interval-modal.html
+++ b/www/app/maps/strat-section/add-interval-modal.html
@@ -12,5 +12,12 @@
     <form name='straboForm' novalidate=''>
       <auto-fields/>
     </form>
+    <br>
+    <div align="right">
+      <button ng-click='vm.addMoreDetail()' class='button button-clear button-positive'>
+        <i class='icon ion-plus-circled'></i>
+        <span class='button-text-big'>Add More Detail</span>
+      </button>
+    </div>
   </ion-content>
 </ion-modal-view>
