--- a/www/app/maps/strat-section/spots-this-map.html
+++ b/www/app/maps/strat-section/spots-this-map.html
@@ -59,7 +59,7 @@
   <ion-list>
     <ion-item class='item-text-wrap item-button-right'
               ng-repeat='spot in vm.stratSectionIntervals track by spot.properties.id'>
-      <div ng-click='vm.goToSpot(spot.properties.id)'>
+      <div ng-click='vm.goToSpot(spot.properties.id, "sed-lithologies")'>
         <strabo-spots-list-directive></strabo-spots-list-directive>
         <div>
           <span ng-show='vm.hasTags(spot.properties.id)' class='list-sub'>
