--- a/www/app/menu/menu.web.html
+++ b/www/app/menu/menu.web.html
@@ -34,7 +34,7 @@
           <ul class="dropdown-menu">
             <li><a ui-sref="app.map">Main Map</a></li>
             <li><a ui-sref="app.image-basemaps">Image Basemaps</a></li>
-            <li ng-show='vm.getIsStratSectionMode()'><a ui-sref="app.strat-sections">Strat Sections</a></li>
+            <li ng-show='vm.getIsSedMode()'><a ui-sref="app.strat-sections">Strat Sections</a></li>
             <li><a ui-sref="app.other-maps">Other Basemaps</a></li>
           </ul>
         </li>
