--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -62,7 +62,7 @@
         <ion-item nav-clear menu-close href='#/app/image-basemaps'>
           Image Basemaps
         </ion-item>
-        <ion-item nav-clear menu-close href='#/app/strat-sections' ng-show='vm.getIsSedMode()'>
+        <ion-item nav-clear menu-close href='#/app/strat-sections' ng-show='vm.getIsStratMode()'>
           Strat Sections
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/other-maps'>
