refactored images tab & added take photo button to navbar

--- a/www/app/spot/images/images-tab.web.html
+++ b/www/app/spot/images/images-tab.web.html
@@ -1,4 +1,4 @@
-<button onclick="document.getElementById('file').click()"
+<button ng-click="vmChild.addImage()"
         class='button button-clear button-positive'>
   <i class='icon ion-image'></i>
   <span class='button-text-big'>Add Image From File</span>
