Spot - moved Delete Spot to 3-dot menu

--- a/www/app/spot/spot/spot-popover.html
+++ b/www/app/spot/spot/spot-popover.html
@@ -1,6 +1,9 @@
 <ion-popover-view class='fit'>
   <ion-content scroll='false'>
     <ion-list>
+      <ion-item ng-click='vm.deleteSpot()'>
+        <i class='icon ion-trash-b'></i> Delete this Spot
+      </ion-item>
       <ion-item ng-click='vm.copyThisSpot()'>
         <i class="icon ion-ios-copy"></i> Copy this Spot
       </ion-item>
