--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -119,6 +119,7 @@
     <script src="app/maps/map/coordinate-range.factory.js"></script>
     <script src="app/maps/map/map.factory.js"></script>
     <script src="app/maps/map/map-draw.factory.js"></script>
+    <script src="app/maps/map/map-emogeos.factory.js"></script>
     <script src="app/maps/map/map-features.factory.js"></script>
     <script src="app/maps/map/map-layer.factory.js"></script>
     <script src="app/maps/map/map-setup.factory.js"></script>
