--- a/www/app/maps/map/map-popover.html
+++ b/www/app/maps/map/map-popover.html
@@ -10,7 +10,7 @@
       <ion-item ng-click='vm.groupSpots()'>
         <i class="icon ion-pricetags"></i> Add Tag(s) to Spot(s)
       </ion-item>
-      <ion-item ng-show='vm.isiOS()' ng-click='vm.stereonetSpots()'>
+      <ion-item ng-show='vm.isiOS() || vm.isWeb' ng-click='vm.stereonetSpots()'>
         <i class="icon ion-disc"></i> Lasso Spots for Stereonet
       </ion-item>
       <ion-item ng-show='vm.isNesting' ng-click='vm.toggleNesting()'>
