sed - updated strat section settings

--- a/www/app/maps/strat-section/strat-section.web.html
+++ b/www/app/maps/strat-section/strat-section.web.html
@@ -37,7 +37,7 @@
 <div ng-show='!vm.mapView'>
   <div class='strabo-subheader  padding-left '>
     <div class="strabo-subheader-text subheader-left">
-      {{ vm.thisSpotWithStratSection.properties.sed.strat_section.label }} Related Spots
+      {{ vm.thisSpotWithStratSection.properties.sed.strat_section.section_well_name }} Related Spots
     </div>
     <div class="subheader-right padding-top">
       <span ng-show='vm.isNesting' class='nesting-notification-web'>Nesting On</span>
