--- a/www/app/spot/sed/strat-section/strat-section-tab.directive.html
+++ b/www/app/spot/sed/strat-section/strat-section-tab.directive.html
@@ -11,31 +11,9 @@
       <i class='button button-icon icon button-clear button-positive ion-podium rotate-90'></i>
       <span class='button-text-big'>View Stratigraphic Section</span>
     </button>
-    <ion-input class='item item-input item-stacked-label item-text-wrap'>
-      <ion-label>Section Label</ion-label>
-      <input type='text' placeholder='Label this section' ng-model='vm.spot.properties.sed.strat_section.label'>
-    </ion-input>
-    <ion-input class="item item-input item-select item-stacked-label item-text-wrap">
-      <ion-label>Column Profile (X-Axis Labels)</ion-label>
-      <select ng-model='vm.spot.properties.sed.strat_section.column_profile'>
-        <option value='clastic'>clastic</option>
-        <option value='carbonate'>carbonate</option>
-        <option value='mixed_clastic'>mixed clastic/carbonate</option>
-        <option value='weathering_pro'>weathering profile</option>
-      </select>
-    </ion-input>
-    <ion-checkbox ng-model="vm.spot.properties.sed.strat_section.misc_labels">Show Labels for Misc Lithologies</ion-checkbox>
-    <ion-input class="item item-input item-select item-stacked-label item-text-wrap">
-      <ion-label>Column Y-Axis Units</ion-label>
-      <select ng-model='vm.spot.properties.sed.strat_section.column_y_axis_units'
-              ng-change='vmChild.changeUnits(vm.spot.properties.sed.strat_section.column_y_axis_units,
-              "{{vm.spot.properties.sed.strat_section.column_y_axis_units }}")'>
-        <option value='cm'>cm</option>
-        <option value='m'>m</option>
-        <option value='in'>in</option>
-        <option value='ft'>ft</option>
-      </select>
-    </ion-input>
+    <form name='straboForm' novalidate=''>
+      <auto-fields/>
+    </form>
     <div class='item item-divider'>
       Image Overlays
     </div>
@@ -58,12 +36,5 @@
         </div>
       </ion-item>
     </ion-list>
-    <div class='item item-divider'>
-      Notes
-    </div>
-    <ion-input class='item item-input'>
-      <textarea placeholder='Notes about this Section' rows='12'
-                ng-model='vm.spot.properties.sed.strat_section.notes'></textarea>
-    </ion-input>
   </div>
 </div>
