--- a/www/app/maps/strat-sections/strat-sections.directive.html
+++ b/www/app/maps/strat-sections/strat-sections.directive.html
@@ -5,7 +5,7 @@
   <ion-list>
     <ion-item ng-repeat='spotWithStratSection in vm.spotsWithStratSections track by spotWithStratSection.properties.id'
               ng-click='vm.goToStratSection(spotWithStratSection)'>
-      {{ spotWithStratSection.properties.sed.strat_section.label || 'Unnamed' }}
+      {{ spotWithStratSection.properties.sed.strat_section.section_well_name || 'Unnamed' }}
     </ion-item>
   </ion-list>
 </div>
