--- a/www/app/misc/misc.directive.html
+++ b/www/app/misc/misc.directive.html
@@ -29,6 +29,16 @@
   </div>
 
   <div class='field-group item item-divider'>
+    Testing Mode
+  </div>
+  <ion-toggle
+    toggle-class='toggle-positive'
+    ng-model='vm.isTestingMode'
+    ng-click='vm.toggleTestingMode()'
+  <span class='toggle-left-label'>Turn on Testing Mode</span>
+  </ion-toggle>
+
+  <div class='field-group item item-divider'>
     View Spot Data Model
   </div>
   <div class='padding'>
