--- a/www/app/project/description/description.directive.html
+++ b/www/app/project/description/description.directive.html
@@ -9,7 +9,7 @@
       <ion-label>
         Magnetic Declination
         <button class='button button-small button-icon ion-information-circled strabo-field-info-button'
-                ng-click='form.showFieldInfo({"label": "Magnetic Declination", "hint": "The difference between the north geographic pole and the north magnetic pole. A positive number is East and negative is West."})'></button>
+                ng-click='form.showFieldInfo({"label": "Magnetic Declination", "hint": "Enter declination based on whether magnetic north is east or west of geographic north. If magnetic north is west of geographic north, enter declination as a negative number; if it is east enter declination as a positive number."})'></button>
       </ion-label>
       <input type='number'
              name='magnetic_declination'
