updated vocabulary to change "tab/s" to "page/s"

--- a/www/app/attributes/images/images.directive.html
+++ b/www/app/attributes/images/images.directive.html
@@ -16,7 +16,7 @@
       </ion-input>
     </div>
     <div class='padding' ng-show='vm.images.length === 0'>
-      No Images found in any of the active Spots. Add a new Image from the Image tab within a Spot.
+      No Images found in any of the active Spots. Add a new Image from the Images Page within a Spot.
     </div>
     <div class='padding' ng-show='vm.images.length !== 0 && vm.filteredImages.length === 0'>
       No images with the this type yet.
