--- a/www/app/maps/image-basemaps/image-basemaps.directive.html
+++ b/www/app/maps/image-basemaps/image-basemaps.directive.html
@@ -1,6 +1,6 @@
 <div>
   <div class='padding' ng-if='!vm.imageBasemaps.length'>
-    In the Images tab for Spot, add an image to a Spot and check the Annotate box to make it available for annotation.
+    In the Images Page for a Spot, add an image to the Spot and check the Annotate box to make it available for annotation.
   </div>
   <ion-list>
     <ion-item ng-repeat='imageBasemap in vm.imageBasemaps'
