--- a/www/index.html
+++ b/www/index.html
@@ -84,6 +84,7 @@
     <!-- ng spot tab controllers -->
     <script src="app/spot/3d-structures/3dstructures-tab.controller.js"></script>
     <script src="app/spot/images/images-tab.controller.js"></script>
+    <script src="app/spot/minerals/minerals-tab.controller.js"></script>
     <script src="app/spot/nesting/nesting-tab.controller.js"></script>
     <script src="app/spot/orientations/orientations-tab.controller.js"></script>
     <script src="app/spot/other-features/other-features-tab.controller.js"></script>
@@ -151,6 +152,7 @@
     <script src="app/project/tools/tools.directive.js"></script>
     <script src="app/spot/3d-structures/3dstructures-tab.directive.js"></script>
     <script src="app/spot/images/images-tab.directive.js"></script>
+    <script src="app/spot/minerals/minerals-tab.directive.js"></script>
     <script src="app/spot/nesting/nesting-tab.directive.js"></script>
     <script src="app/spot/orientations/orientations-tab.directive.js"></script>
     <script src="app/spot/other-features/other-features-tab.directive.js"></script>
