updated Spot -list detail

--- a/www/app/spots/spots-list-detail-modal.html
+++ b/www/app/spots/spots-list-detail-modal.html
@@ -5,7 +5,7 @@
     <h1 class='title'>Spots List Detail</h1>
   </ion-header-bar>
   <ion-content class='has-header'>
-    <ion-checkbox ng-model="vm.showDetail.tabs">Show Tabs with Data</ion-checkbox>
+    <ion-checkbox ng-model="vm.showDetail.tabs">Show Spot Pages with Data</ion-checkbox>
     <ion-checkbox ng-model="vm.showDetail.tags">Show Tags</ion-checkbox>
   </ion-content>
 </ion-modal-view>
