moved Testing Mode toggle to left side

--- a/www/app/misc/misc.directive.html
+++ b/www/app/misc/misc.directive.html
@@ -32,10 +32,11 @@
     Testing Mode
   </div>
   <ion-toggle
+    class='toggle-small strabo-form'
     toggle-class='toggle-positive'
     ng-model='vm.isTestingMode'
-    ng-click='vm.toggleTestingMode()'
-  <span class='toggle-left-label'>Turn on Testing Mode</span>
+    ng-click='vm.toggleTestingMode()'>
+    <span class='toggle-left-label'>Turn on Testing Mode</span>
   </ion-toggle>
 
   <div class='field-group item item-divider'>
