--- a/www/app/about/about.directive.html
+++ b/www/app/about/about.directive.html
@@ -1,10 +1,10 @@
 <div class='padding'>
   <b>StraboSpot v1.1.0</b>
   <br><br>
-  Website: <a href='#' onclick='window.open("http://strabospot.org/", "_system", "location=yes"); return false;'>http://strabospot.org/</a>
+  Website: <a href='#' onclick='window.open("https://strabospot.org/", "_system", "location=yes"); return false;'>https://strabospot.org/</a>
   <br>
   App Download: <a href='#'
-                   onclick='window.open("http://strabospot.org/download", "_system", "location=yes"); return false;'>http://strabospot.org/download</a>
+                   onclick='window.open("https://strabospot.org/download", "_system", "location=yes"); return false;'>https://strabospot.org/download</a>
   <br><br>
   StraboSpot is an application to collect geologic data in a field setting, and is designed to be used by geologists,
   geology students, and others. The application allows the collection of geologic data using a variety of base maps -
@@ -31,7 +31,7 @@
     the Earth Sciences. The data imported into StraboSpot is directly stored in a database that is designed to accommodate
     the digital data reporting requirements of National Science Foundation grants and allows retrieval by researchers. More
     explanation of StraboSpot and a desktop version with expanded tools are at
-    <a href='#' onclick='window.open("http://strabospot.org/", "_system", "location=yes"); return false;'>https://strabospot.org</a>.
+    <a href='#' onclick='window.open("https://strabospot.org/", "_system", "location=yes"); return false;'>https://strabospot.org</a>.
     <br><br>
     StraboSpot uses a Neo4j graph database to give persistence to observations, photographs, or any other images
     imported by the user. The system compiles the complex relationships between observations (including temporal information,
