--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -101,6 +101,7 @@
     <!-- ng spot tab controllers -->
     <script src="app/spot/3d-structures/3dstructures-tab.controller.js"></script>
     <script src="app/spot/images/images-tab.controller.js"></script>
+    <script src="app/spot/minerals/minerals-tab.controller.js"></script>
     <script src="app/spot/nesting/nesting-tab.controller.js"></script>
     <script src="app/spot/orientations/orientations-tab.controller.js"></script>
     <script src="app/spot/other-features/other-features-tab.controller.js"></script>
@@ -169,6 +170,7 @@
     <script src="app/project/tools/tools.directive.js"></script>
     <script src="app/spot/3d-structures/3dstructures-tab.directive.js"></script>
     <script src="app/spot/images/images-tab.directive.js"></script>
+    <script src="app/spot/minerals/minerals-tab.directive.js"></script>
     <script src="app/spot/nesting/nesting-tab.directive.js"></script>
     <script src="app/spot/orientations/orientations-tab.directive.js"></script>
     <script src="app/spot/other-features/other-features-tab.directive.js"></script>
