Sed: moved image overlay settings to top of strat section settings

--- a/www/app/spot/sed/strat-section/strat-section-tab.directive.html
+++ b/www/app/spot/sed/strat-section/strat-section-tab.directive.html
@@ -11,9 +11,6 @@
       <i class='button button-icon icon button-clear button-positive ion-podium rotate-90'></i>
       <span class='button-text-big'>View Stratigraphic Section</span>
     </button>
-    <form name='straboForm' novalidate=''>
-      <auto-fields/>
-    </form>
     <div class='item item-divider'>
       Image Overlays
     </div>
@@ -36,5 +33,11 @@
         </div>
       </ion-item>
     </ion-list>
+    <div class='item item-divider'>
+      Section Settings
+    </div>
+    <form name='straboForm' novalidate=''>
+      <auto-fields/>
+    </form>
   </div>
 </div>
